# _prova_python_dynver

./: .gitignore  README.md  pyproject.toml
src/: dynver.py
