[build-system]
build-backend = "pdm.backend"

requires = [ "pdm-backend" ]

[project]
name = "prova-python-dynver"
description = "Default template for PDM package"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vito De Tullio", email = "vito.detullio@finconsgroup.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [  ]
scripts.dynver = "dynver:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pyproject-fmt>=2.5",
    "ruff>=0.8.2",
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check {args:.}",
    "mypy {args:.}",
], keep_going = true }

[tool.ruff]
line-length = 80
src = [ "demo", "src", "stubs", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "COM812", # conflicts with formatter
    "D1",     # disabled by me
    "D203",   # incompatibility with D211
    "D213",   # incompatibility with D212
    "ISC001", # conflicts with formatter
    "PD",     # disabled by me
    "PT009",  # disabled by me
    "PT027",  # disabled by me
    "Q001",   # conflicts with formatter
    "Q002",   # conflicts with formatter
    "S603",   # incompatibility with S602
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.mypy]
mypy_path = [ "src", "tests", "demo", "stubs" ]
strict = true
warn_unused_configs = true
